# crossfire

./: CMakeLists.txt
module/crossfire_main/: CMakeLists.txt
module/crossfire_main/include/: crossfire.h
module/crossfire_main/src/: crossfire.c  crossfire_internal.h
module/light_usb_common/: CMakeLists.txt
module/light_usb_common/include/module/: usb_common.h
module/light_usb_common/src/: module.c
module/light_usb_midi/: CMakeLists.txt
module/light_usb_midi/include/module/: usb_midi.h
module/light_usb_midi/src/: midi_host.h  module_internal.h
